fix spacing of team

--- a/wiseDisplay-fe/src/components/Board/SportsBoard/Game/game.css
+++ b/wiseDisplay-fe/src/components/Board/SportsBoard/Game/game.css
@@ -55,7 +55,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
     width: 30%;
 }
 
@@ -74,6 +73,7 @@
 
 .team-name-wrapper {
     width: 100%;
+    height: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -105,6 +105,7 @@
 
 .score-wrapper,
 .team-record-wrapper {
+    height: 30%;
     width: 100%;
     display: flex;
     align-items: center;
